# Bento

./: .gitignore  Makefile  README.md  requirements_emotion.txt  verify_setup.py
backend/: examples_emotion_recognition.py  pyproject.toml
backend/affective_intelligence/: README.md  __init__.py  train.py
backend/affective_intelligence/datasets/: __init__.py  fer2013.py  micro_expressions.py  transforms.py
backend/affective_intelligence/inference/: __init__.py  emotion_predictor.py
backend/affective_intelligence/losses/: __init__.py  emotion_losses.py
backend/affective_intelligence/models/: __init__.py  emotion_net.py
backend/app/: main.py
backend/app/api/: emotion.py
backend/app/core/: config.py
docs/: architecture.md
frontend/: README.md  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
